@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 use WTSI::NPG::iRODS;
-use Test::More tests => 9;
+use Test::More tests => 10;
 use File::Temp qw/ tempfile /;
 
 use_ok('npg_seq_melt::merge::base');
@@ -11,10 +11,12 @@ my $irods = WTSI::NPG::iRODS->new();
 my ($fh, $filename) = tempfile();
 chmod 0775, $filename; 
 
+my $chemistry = ['ALXX','CCXX'];
 my $r = npg_seq_melt::merge::generator->new(
     merge_cmd => $filename,
     dry_run   => 1,
     lsf_runtime_limit => 720,
+    restrict_to_chemistry => $chemistry,
     irods     => $irods);
 
 is ($r->default_root_dir,'/seq/illumina/library_merge/',q[Default iRODS root dir ok]);
@@ -22,6 +24,7 @@ is ($r->default_root_dir,'/seq/illumina/library_merge/',q[Default iRODS root dir
 is ($r->minimum_component_count,'6', 'minimum_component_count is 6');
 is ($r->lsf_num_processors,'3', 'lsf_num_processors is 3');
 is ($r->lsf_runtime_limit,'720', 'lsf_runtime_limit set to 720 minutes');
+is ($r->restrict_to_chemistry,$chemistry,'ALXX and CCXX are HiSeqX');
 my $digest = 'b5a04fbf270d41649224463c03d228632847195786ab9e850e90b6a7c50916df';
 my $base_obj = npg_seq_melt::merge::base->new(rpt_list => '14582:7;14582:8');
 isa_ok ($base_obj->composition(),q[npg_tracking::glossary::composition],"composition attribute o.k.");
