@@ -1,6 +1,7 @@
 ChangeLog 
 ==========
-- LSF attributes lsf_num_processors and lsf_runtime_limit
+- restrict_to_chemistry attribute e.g. to limit to HiSeqX runs 
+- LSF attributes lsf_num_processors and lsf_runtime_limit (default 24 hours)
 - Loading of additional stats files now optional
 - LSF command changed to use -n 3 and resources of span[host=1]
 - minimum_component_count attribute added with default of 6
